# WGLGameDev

./: App.cpp  App.h  CMakeLists.txt  CMakePresets.json  MacApp.h  MacApp.mm  README.md  broken.cpp  learnopengl.c  main.cpp  new_main.cpp  win32_hello_triangle.cpp
macos/: application.cpp  application.h  macos_application.h  macos_application.mm
